# cloudscribe

./: ProjectHome.md
cmake/: FindBoost.cmake  FindConfuse.cmake  FindSnacc.cmake
src/cc/cloudxbase/: CMakeLists.txt  CloudxBase.cc  ServiceTracker.cc
src/cc/cloudxbase/if/: cloudxbase.thrift  reflection_limited.thrift
src/cc/scribe/: CMakeLists.txt  conn_pool.cc  conn_pool.h  env_default.h  forwarder_cat.cc  forwarder_server.cc  forwarder_server.h  inet_addr.c  inet_addr.h  store.cc  store.h  store_queue.cc  store_queue.h
src/cc/scribe/if/: forwarder.thrift
trunk/: CMakeLists.txt
trunk/cmake/: FindAPR.cmake
trunk/src/: CMakeLists.txt
trunk/src/cc/cloudxbase/: CloudxBase.h  ServiceTracker.h
trunk/src/cc/scribe/: common.h  conf.cc  conf.h  file.cc  file.h  group_service.cc  group_service.h  logger.h  utils.h
trunk/src/cc/scribe/tests/: client_test.cc
